<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_intro_white"
            />

        <TextView
            android:text="@string/label_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/font_premium"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/popup_premium_message"/>

        <TextView
            android:id="@+id/premium_subscribe"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/popup_premium_subscribe"
            android:background="@drawable/bg_green_rectangle"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/premium_benefits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/popup_premium_benefits"/>

        <TextView
            android:id="@+id/premium_not_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/font_premium_not_thanks"
            android:text="@string/popup_premium_not_thanks"/>

    </LinearLayout>

</RelativeLayout>