<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/popup_exit_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_intro_white"
            />

        <TextView
            android:id="@+id/popup_exit_message"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/popup_exit_message"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_exit_popup"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/popup_exit_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/popup_exit_cancel"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/font_exit_deselected"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginTop="1dp"
                android:layout_marginRight="0.5dp"/>

            <TextView
                android:id="@+id/popup_exit_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/popup_exit_ok"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/font_exit_selected"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="0.5dp"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>