<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.splash.SplashActivity"
    android:background="@drawable/bg_intro_drive">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_intro_green"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/label_splash"
            android:layout_below="@+id/logo_splash"
            android:text="@string/label_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/message_splash"
            android:layout_below="@+id/label_splash"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/message_splash"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/circle_splash"
            android:layout_below="@+id/message_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_intro_circle"/>

            <ImageView
                android:id="@+id/icon_car_splash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_car"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/test_drive_message_splash"
                android:layout_below="@+id/icon_car_splash"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/test_drive_message_splash"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:gravity="center"/>

            <ImageView
                android:layout_below="@+id/test_drive_message_splash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_info"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/get_into_splash"
            android:layout_below="@+id/circle_splash"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/get_into_splash"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_black_transparent"/>

    </RelativeLayout>


</RelativeLayout>