<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/result_score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_score_title"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/font_result"
                android:padding="10dp"
                android:gravity="center"/>

            <RelativeLayout
                android:id="@+id/result_score_frame"
                android:layout_width="285dp"
                android:layout_height="95dp"
                android:padding="5dp"
                android:background="@drawable/bg_result_score">

                <TextView
                    android:id="@+id/result_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="90"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="@drawable/box_result"/>

                <RelativeLayout
                    android:layout_toRightOf="@+id/result_score"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/result_score_face"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_result_85to100"/>

                    <TextView
                        android:layout_below="@id/result_score_face"
                        android:id="@+id/result_score_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/font_result"
                        android:text="@string/result_85_to_100_less_40_questions"/>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/result_amount_of_right_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/share_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/result_share_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_facebook"
                    android:layout_marginRight="10dp"/>

                <ImageView
                    android:id="@+id/result_share_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_twitter"
                    android:layout_marginRight="10dp"/>

                <ImageView
                    android:id="@+id/result_share_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_whatsapp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/result_repeat_test_again"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/result_repeat_all_test"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:background="@drawable/bg_result_button"/>

            <TextView
                android:id="@+id/result_repeat_incorrect_answer"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/result_repeat_incorrect_answer"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:background="@drawable/bg_result_button"/>

            <TextView
                android:id="@+id/result_go_to_begin"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/result_go_start"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:background="@drawable/bg_result_button"/>

        </LinearLayout>

</RelativeLayout>