<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/chapter_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <ImageView
            android:id="@+id/chapter_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/btn_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/chapter_header"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/chapter_select_chapters"
        android:layout_below="@id/chapter_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chapter_select_chapters"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/font_select_chapters"
        android:gravity="center"/>
    
    <RelativeLayout
        android:id="@+id/chapter_all_relative_layout"
        android:layout_below="@id/chapter_select_chapters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/chapter_all_chapters"            
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/chapter_all_chapters"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_alignParentLeft="true"/>
        
        <CheckBox
            android:id="@+id/chapter_all_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        
    </RelativeLayout>

    <View
        android:id="@+id/chapter_all_line"
        android:layout_below="@id/chapter_all_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/bg_premium_line"/>

    <View
        android:id="@+id/chapter_list_line"
        android:layout_below="@id/chapter_all_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="50dp"
        android:background="@color/bg_premium_line"/>

    <ListView
        android:id="@+id/chapter_list_view"
        android:layout_below="@+id/chapter_list_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">        
    </ListView>

    

</RelativeLayout>